@startuml
' Alternative 5: simplified dependency/class relation view.

left to right direction
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam shadowing false

class "SeparationService" as Service <<Facade>> #DCEBFF {
  +separate_uploaded_audio(...)
}

class "ModelStrategyResolver" as Resolver <<Helper>> #F4F6F8 {
  +resolve(model)
}

class "SeparationEngine" as Engine <<Context>> #FFF1CC {
  +separate(...)
}

interface "SeparationAlgorithm" as Algorithm <<Strategy>> #FFF1CC {
  +separate(...)
}

class "NeoSSNetStrategy" as NeoSSNet <<ConcreteStrategy>> #FFF1CC {
  +separate(...)
}

class "AudioValidatorFactory" as ValidatorFactory <<Creator>> #E4F7E7 {
  +create_validator(filename)
}

class "WavAudioValidatorFactory" as WavValidatorFactory <<ConcreteCreator>> #E4F7E7 {
  +create_validator(filename)
}

interface "AudioValidator" as Validator <<Product>> #E4F7E7 {
  +validate(upload_file)
}

class "WavAudioValidator" as WavValidator <<ConcreteProduct>> #E4F7E7 {
  +validate(upload_file)
}

Service --> Resolver : resolves selected strategy
Service --> Engine : uses context
Resolver ..> Algorithm : returns
Engine --> Algorithm : depends on abstraction
NeoSSNet ..|> Algorithm
ValidatorFactory ..> Validator : returns
WavValidatorFactory --|> ValidatorFactory
WavValidatorFactory ..> WavValidator : creates
WavValidator ..|> Validator

@enduml
